--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -3,6 +3,12 @@
   padding: 1.5rem 4rem;
   text-align: center;
   margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.about__container{
+  max-width: 1600px;
 }
 
 .about__title {
@@ -15,7 +21,6 @@
 
 .about__desc-container {
   width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   margin-top: 2rem;
@@ -43,6 +48,7 @@
     width: 18px;
     vertical-align: middle;
     margin-left: 5px;
+    padding: 1rem;
 }
 
 .about__cta a {
@@ -75,7 +81,6 @@
   width: 90%;
   aspect-ratio: 1;
 }
-
 
 @media (max-width: 991px) {
     .about {
