--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -3,7 +3,7 @@
   /* background-color: var(--white-color); */
   padding: 50px 0;
   width: 100%;
-  height: 100vh;
+  height: auto;
   padding: 1.5rem 4rem;
   text-align: center;
   /* background-image: url(../img/hero_bg_main.jpeg); */
