--- a/src/assets/css/HeroSection.css
+++ b/src/assets/css/HeroSection.css
@@ -51,6 +51,12 @@
   transition: transform 0.2s ease;
 }
 
+@media (min-width: 1601px){
+  .hero{
+    height: 50vh;
+  }
+}
+
 @media (max-width: 991px) {
   .hero {
     height: calc(100vh - 74.5px);
