--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -1,18 +1,21 @@
 .about {
   width: 100%;
   padding: 1.5rem 4rem;
-  text-align: center;
-  margin-bottom: 1rem;
+  text-align: left;
   display: flex;
   justify-content: center;
+  background-color: var(--white-color);
 }
 
-.about__container{
+.about__container {
   max-width: 1600px;
 }
 
 .about__title {
   margin-top: 2rem;
+}
+.about__title span {
+  color: var(--primary-color);
 }
 .about__title h2 {
   margin-top: 0.5rem;
@@ -22,33 +25,34 @@
 .about__desc-container {
   width: 100%;
   display: flex;
-  align-items: center;
-  margin-top: 2rem;
+  align-items: flex-start;
+  margin-top: 5rem;
 }
 
 .about__description-left {
   width: 60%;
 }
-.about__description p{
-    font-size: 1.125rem;
-    line-height: 1.6rem;
-    text-align: justify;
+.about__description p {
+  font-size: 1.125rem;
+  line-height: 1.6rem;
+  text-align: justify;
+  color: var(--black-color);
 }
 
-.cta{
-    display: flex;
-    align-items: center;
+.cta {
+  display: flex;
+  align-items: center;
 }
 
 .about__cta {
   padding-top: 3rem;
   margin-right: 1rem;
 }
-.about__cta img{
-    width: 18px;
-    vertical-align: middle;
-    margin-left: 5px;
-    padding: 1rem;
+.about__cta img {
+  width: 18px;
+  vertical-align: middle;
+  margin-left: 5px;
+  padding: 1rem;
 }
 
 .about__cta a {
@@ -56,69 +60,76 @@
   font-weight: 500;
   padding: 0.6rem 1.75rem;
   background-color: var(--primary-color);
-  border: 2px solid var(--primary-color);
+  border: 2.5px solid var(--primary-color);
   color: var(--white-color);
   border-radius: 0.2rem;
   transition: transform 0.2s ease;
 }
 
-.white_arrow{
+.white_arrow {
   margin-left: 10px !important;
 }
 
-.cta-secondary a{
-    background-color: white;
-    border: 2px solid var(--primary-color);
-    color: var(--primary-color);
+.cta-secondary a {
+  background-color: var(--white-color);
+  border: 2px solid var(--primary-color);
+  color: var(--primary-color);
 }
 
 .about__description-right {
   width: 40%;
   margin-left: 1rem;
+  margin-top: -10rem;
 }
 
 .about__image img {
   width: 90%;
-  aspect-ratio: 1;
+  border-radius: 50%;
 }
 
 @media (max-width: 991px) {
-    .about {
-        padding: 1.5rem 2.5rem;
-      }
-    .about__description-left {
-        width: 100%;
-      }
-      .about__description-right{
-        display: none;
-      }
-      .about__title h2 {
-        margin-top: 0.5rem;
-        font-size: 1.75rem;
-      }
-      .about__description p{
-        font-size: 1.1rem;
-    }
+  .about {
+    padding: 1.5rem 2.5rem;
+  }
+  .about__desc-container {
+    margin-top: 3rem;
+  }
+  .about__description-left {
+    width: 100%;
+  }
+  .about__description-right {
+    display: none;
+  }
+  .about__title h2 {
+    margin-top: 0.5rem;
+    font-size: 1.75rem;
+  }
+  .about__description p {
+    font-size: 1.1rem;
+  }
 }
 
 @media (max-width: 655px) {
-    .about {
-        padding: 1.25rem 1.25rem;
-      }
-    .about__title h2 {
-        margin-top: 0.5rem;
-        font-size: 1.5rem;
-      }
-      .about__description p{
-        font-size: 1rem;
-        line-height: 1.4rem;
-    }
-    .cta{
-        display: block;
-        margin-bottom: 2rem;
-    }
-    .about__cta {
-        padding-top: 2rem;
-        margin-right: 1rem;
-      }
+  .about {
+    padding: 1rem;
   }
+  .about__title h2 {
+    margin-top: 0.5rem;
+    font-size: 1.5rem;
+  }
+  .about__desc-container {
+    margin-top: 1rem;
+  }
+  .about__description p {
+    font-size: 1rem;
+    line-height: 1.4rem;
+  }
+  .cta {
+    display: block;
+    margin-bottom: 2rem;
+  }
+  .about__cta {
+    padding-top: 2rem;
+    margin-right: 1rem;
+  }
+}
