--- a/src/assets/css/ProjectCard.css
+++ b/src/assets/css/ProjectCard.css
@@ -5,13 +5,13 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-  overflow: hidden; 
+  overflow: hidden;
   cursor: pointer;
   transition: box-shadow 0.3s;
 }
 
 .project__card:hover {
-  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.2); 
+  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.2);
 }
 
 .project__conatiner {
@@ -24,7 +24,7 @@
   height: auto;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
-  transition: transform 0.4s; 
+  transition: transform 0.4s;
 }
 
 .project__card-content {
@@ -38,8 +38,9 @@
   text-shadow: none;
 }
 
-.project__card-content-desc{
+.project__card-content-desc {
   margin: 0.75rem 0;
+  color: var(--off-black);
 }
 
 .project__card-links {
@@ -63,14 +64,13 @@
 }
 
 .project__card-links a:last-child {
-  background-color: white;
-    border: 1px solid var(--primary-color);
-    color: var(--primary-color);
+  background-color: var(--white-color);
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
 }
 
-@media (min-width: 1601px){
+@media (min-width: 1601px) {
   .project__card {
     max-width: 520px;
-    
   }
 }
