--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -1,6 +1,6 @@
 .header {
-  background-color: var(--white-color);
-  border-bottom: 1px solid var(--off-white);
+  background-color: var(--background-color);
+  border-bottom: 1px solid rgba(130, 130, 130, 0.2);
   padding: 10px 15px;
   position: fixed;
   width: 100%;
@@ -29,7 +29,7 @@
   margin-left: 15px;
   font-size: 1.5rem;
   font-weight: bold;
-  color: var(--black-color);
+  color: var(--text-color);
 }
 
 .header__main {
@@ -48,7 +48,7 @@
 
 .header__link {
   text-decoration: none;
-  color: var(--off-black);
+  color: var(--text-color);
   font-size: 1.1rem;
   font-weight: 500;
   transition: color 0.3s ease;
@@ -77,7 +77,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: var(--white-color);
+  background-color: var(--text-color);
   width: 100%;
   height: 100vh;
   padding-top: 15%;
