--- a/src/assets/css/HeroSection.css
+++ b/src/assets/css/HeroSection.css
@@ -100,12 +100,16 @@
 .hero__cta a {
   font-size: 1.25rem;
   font-weight: 500;
-  padding: 0.8rem 1.8rem;
+  padding: 0.75rem 1.8rem;
   background-color: var(--primary-color);
   color: var(--white-color);
   border-radius: 0.2rem;
   transition: transform 0.2s ease;
   cursor: pointer;
+}
+
+.hero__cta a:hover{
+  background-color: var(--button-hover);
 }
 
 @media (min-width: 1601px) {
