--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -1,9 +1,14 @@
+body.menu-open {
+  overflow: hidden;
+}
+
 .header {
   background-color: var(--background-color);
   border-bottom: 1px solid rgba(130, 130, 130, 0.2);
   padding: 10px 15px;
   position: fixed;
   width: 100%;
+  z-index: 999;
 }
 
 .header__content {
@@ -77,12 +82,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: var(--text-color);
+  background-color: var(--background-color);
   width: 100%;
   height: 100vh;
   padding-top: 15%;
   text-align: center;
-  overflow-x: hidden;
+  overflow: hidden;
   transform: translateX(100%);
   transition: all 0.75s ease-in-out;
 }
