--- a/src/assets/css/Projects.css
+++ b/src/assets/css/Projects.css
@@ -8,6 +8,10 @@
   }
   .projects__container{
     max-width: 1600px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
   
   .projects__title {
