--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -89,114 +89,119 @@
     }
 }
 
-/*  TEXT ANIMATION  */
+/* WORD ANIMATION */
 @import url("https://fonts.googleapis.com/css2?family=Titan+One&display=swap");
 
-.wrapper {
-  width: 100%;
-  text-align: center;
-}
-
-.wrapper span {
-  -webkit-text-stroke-width: 1.25px;
-  -webkit-text-stroke-color: #000;
-  font-size: 45px;
-  text-shadow: 0 0px var(--black-color);
-  transform: translate(0, 100%) rotate(4deg);
-  animation: jump 4s ease-in-out infinite;
-  display: inline-block;
+.word {
   font-family: "Titan One", cursive;
-  color: #fff;
+  letter-spacing: 0.5rem;
 }
 
-.wrapper span:nth-child(1) {
-  animation-delay: 100ms;
-}
-.wrapper span:nth-child(2) {
-  animation-delay: 200ms;
-}
-.wrapper span:nth-child(3) {
-  animation-delay: 300ms;
-}
-.wrapper span:nth-child(4) {
-  animation-delay: 400ms;
-}
-.wrapper span:nth-child(5) {
-  animation-delay: 500ms;
-}
-.wrapper span:nth-child(6) {
-  animation-delay: 600ms;
-}
-.wrapper span:nth-child(7) {
-  animation-delay: 700ms;
-}
-.wrapper span:nth-child(8) {
-  animation-delay: 800ms;
-}
-.wrapper span:nth-child(9) {
-  animation-delay: 900ms;
-}
-.wrapper span:nth-child(10) {
-  animation-delay: 1000ms;
-}
-.wrapper span:nth-child(11) {
-  animation-delay: 1100ms;
-}
-.wrapper span:nth-child(12) {
-  animation-delay: 1200ms;
-}
-.wrapper span:nth-child(13) {
-  animation-delay: 1300ms;
-}
-.wrapper span:nth-child(14) {
-  animation-delay: 1400ms;
-}
-.wrapper span:nth-child(15) {
-  animation-delay: 1500ms;
-}
-.wrapper span:nth-child(16) {
-  animation-delay: 1600ms;
-}
-.wrapper span:nth-child(17) {
-  animation-delay: 1700ms;
-}
-.wrapper span:nth-child(18) {
-  animation-delay: 1800ms;
-}
-.wrapper span:nth-child(19) {
-  animation-delay: 1900ms;
-}
-.wrapper span:nth-child(20) {
-  animation-delay: 2000ms;
+.word span {
+  cursor: pointer;
+  display: inline-block;
+  font-size: 5rem;
+  user-select: none;
+  line-height: .8;
+  color: white;
 }
 
-@keyframes jump {
-  33% {
-    text-shadow: 0 15px #372f4a;
+.word span:nth-child(1).active {
+  animation: balance 1.5s ease-out;
+  transform-origin: bottom left;
+}
+
+@keyframes balance {
+  0%, 100% {
+    transform: rotate(0deg);
   }
-  50% {
-    transform: translate(0, 0) rotate(-4deg);
-    text-shadow: 0 0px #573e92;
-  }
-  66.67% {
-    text-shadow: 0 -15px #7037F8;
+  
+  30%, 60% {
+    transform: rotate(-45deg);
   }
 }
 
+.word span:nth-child(2).active {
+  animation: shrinkjump 1s ease-in-out;
+  transform-origin: bottom center;
+}
 
-@media (min-width: 1601px){
-  .wrapper span {
-    font-size: 60px;
+@keyframes shrinkjump {
+  10%, 35% {
+    transform: scale(2, .2) translate(0, 0);
+  }
+  
+  45%, 50% {
+    transform: scale(1) translate(0, -150px);
+  }
+  
+  80% {
+    transform: scale(1) translate(0, 0);
   }
 }
 
-@media screen and (max-width: 991px) {
-  .wrapper span {
-    font-size: 30px;
+.word span:nth-child(3).active {
+  animation: falling 2s ease-out;
+  transform-origin: bottom center;
+}
+
+@keyframes falling {
+  12% {
+    transform: rotateX(240deg);
+  }
+  
+  24% {
+    transform: rotateX(150deg);
+  }
+  
+  36% {
+    transform: rotateX(200deg);
+  }
+  
+  48% {
+    transform: rotateX(175deg);
+  }
+  
+  60%, 85% {
+    transform: rotateX(180deg);
+  }
+  
+  100% {
+    transform: rotateX(0deg);
   }
 }
-@media screen and (max-width: 655px) {
-  .wrapper span {
-    font-size: 22.5px;
+
+.word span:nth-child(4).active {
+  animation: rotate 1.5s linear;
+  transform-origin: center center;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+.word span:nth-child(5).active {
+  animation: toplong 1.2s linear;
+  transform-origin: center center;
+}
+
+@keyframes toplong {
+  0% {
+    transform: scaleY(1);
+  }
+  
+  90% {
+    transform: scaleY(3);
+  }
+}
+
+@media (max-width: 991px){
+  .word span{
+    font-size: 3rem;
   }
 }
